--- a/sass/_card.sass
+++ b/sass/_card.sass
@@ -128,7 +128,7 @@
     color: $primaryText
   .cp-detail-onehaft
     .cp-column-item
-      display: inline
+      display: table
     .cp-row
       white-space: nowrap
       margin-top: 5px
